@@ -22,7 +22,9 @@ OpenLDAP 2.4.22 Engineering
 	Fixed slapd REP_ENTRY flag handling (ITS#5340)
 	Fixed slapd sasl auxprop_lookup (ITS#6441)
 	Fixed slapd sasl auxprop ssf (ITS#5195)
+	Fixed slapd syncrepl for attributes with no matching rule (ITS#6458)
 	Fixed slapd syncrepl for unknown attrs and delta-sync (ITS#6473)
+	Fixed slapd syncrep loop with moddn (ITS#6472)
 	Fixed slapo-accesslog to not replicate internal purges (ITS#6519)
 	Fixed slapd-bdb contextCSN updates from updatedn (ITS#6469)
 	Fixed slapd-bdb lockobj zeroing (ITS#6501)
